--- a/fiesta.html
+++ b/fiesta.html
@@ -2,101 +2,134 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>RGZAltamoda</title>
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RGZAltamoda</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <header class="header">
-        <div class="header__logo">
-            <img src="img/LogoMakr-0WdLz5.png" alt="" />
-        </div>
-        <div class="header__contactanos">
-            <a href="https://api.whatsapp.com/send?phone=+5493516066789" class="btn-wsp"><i class="fab fa-whatsapp"></i></a>
-        </div>
+  <header>
+    <div class="header__contactanos">
+      <a href="https://api.whatsapp.com/send?phone=+5493516066789" class="btn-wsp"><i class="fab fa-whatsapp"></i></a">
+    </div>
+    <div class="container">
+      <div class="row">
+        <a class="nav__link" class="logo" href="./index.html"><img src="img/LogoMakr-0WdLz5.png" alt="logo" /></a>
+        <nav>
+          <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link" href="./index.html">inicio</a class="nav__link"></li
+              class="nav_item">
+            <li class="nav__item"><a class="nav__link" href="./novias.html">novias</a class="nav__link"></li
+              class="nav_item">
+            <li class="nav__item"><a class="nav__link" href="./madrinas.html">madrinas</a class="nav__link"></li
+              class="nav_item">
+            <li class="nav__item"><a class="nav__link" href="./fiesta.html">fiesta</a class="nav__link"></li
+              class="nav_item">
+            <li class="nav__item"><a class="nav__link" href="./contacto.html">contacto</a class="nav__link"></li
+              class="nav_item">
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+  <main>
+    <div class="container">
+      <section>
         <div>
-            <nav class="header__menu">
-                <ul>
-                    <li><a href="./index.html">inicio</a></li>
-                    <li><a href="./novias.html">novias</a></li>
-                    <li><a href="./madrinas.html">madrinas</a></li>
-                    <li><a href="./fiesta.html">fiesta</a></li>
-                    <li><a href="./contacto.html">contacto</a></li>
-                </ul>
-            </nav>
+          <p>Con sus trajes RGZ Alta Moda viste las ocasiones más especiales. Decisivamente,
+            los vestidos rinden homenaje a la feminidad y a la elegancia, ofreciendo moda para aquellas
+            invitadas que quieren lucir un look inmejorable en fiestas, celebraciones y eventos.
+          </p>
         </div>
-    </header>
-    <main>
-        <section>
-            <div>
-                <h1>Fiesta</h1>
-            </div>
-            <div>
-                <p>Con sus trajes de fiesta y cóctel, RGZ Alta Moda viste las ocasiones más especiales. Decisivamente,
-                    los vestidos rinden homenaje a la feminidad y a la elegancia, ofreciendo moda para aquellas
-                    invitadas que quieren lucir un look inmejorable en fiestas, celebraciones y eventos.
-                </p>
-            </div>
-        </section>
-        <img src="./img/fiesta1.jpg" alt="novia1" />
-        <img src="./img/fiesta2.jpg" alt="novia2" />
-        <img src="./img/fiesta3.jpg" alt="novia3" />
-        <br>
-        <img src="./img/fiesta4.jpg" alt="novia4" />
-        <img src="./img/fiesta5.jpg" alt="novia5" />
-        <img src="./img/fiesta6.jpg" alt="novia5" />
-        </section>
-        <div>
-            <h2>Vestidos de fiesta RGZ Alta Moda: para eventos de día y de noche</h2>
-            <p>Por lo general, cuando las mujeres se encuentran ante una invitación a un acontecimiento especial, asalta
-                la duda sobre cómo vestir. Generalmente, a menos que exista un dress code específico para la ocasión, el
-                protocolo en cuestión dicta las claves de la vestimenta.
-            </p>
+        <div class="gallery-container">
+          <div class="gallery__item">
+            <img src="./img/fiesta1.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/fiesta2.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/fiesta3.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/fiesta4.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/fiesta5.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/fiesta6.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/fiesta7.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/fiesta8.jpg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/fiesta9.jpg" alt="" class="gallery__img">
+          </div>
         </div>
-        <section>
-            <table border="1" cellpadding="20" cellspacing="10">
-                <tr>
-                    <th><img src="./img/corto1.jpg" alt=""></th>
-                    <th><img src="./img/largo1.jpg" alt=""></th>
-                    <th><img src="./img/mono1.jpg" alt=""></th>
-                </tr>
-                <tr>
-                    <td>Vestidos de fiesta cortos</td>
-                    <td>Vestidos de fiesta largos</td>
-                    <td>Vestidos de cóctel y monos</td>
-                </tr>
-                <tr>
-                    <td>Entonces, ¿cuándo serán los mejores candidatos los vestidos de fiesta cortos? Generalmente en
-                        eventos diurnos que impliquen formalidad, tales como una entrega de premios, un acto de
-                        inauguración, un bautizo, una comunión o, lógicamente, una boda. Ahora bien, será determinante
-                        el largo de la falda: se aconseja que, como corta, llegue a la altura de la rodilla.</td>
-                    <td>Los vestidos de fiesta largos serán aptos para festividades matinales, vespertinas y nocturnas,
-                        siendo más habitual en la mayoría de las culturas escogerlos para ocasiones que tengan lugar
-                        durante la tarde y en adelante. Y siempre serán los más indicados para los eventos de alto nivel
-                        ceremonial.</td>
-                    <td>
-                        Los vestidos de cóctel y los monos de fiesta podrán llevarse tanto de día como de
-                        noche, en eventos que requieran cierta etiqueta.
-                        No obstante, no dejará de ser significativo que
-                        sean glamurosos y estén hechos con géneros de calidad, como todos los modelos de RGZ
-                        Alta moda.
-                    </td>
-                </tr>
-                </tr>
-            </table>
-        </section>
-    </main>
-    <footer class="">
-        <a href=""><i class="fab fa-facebook-square"></i></a>
-        <a href=""><i class="fab fa-instagram-square"></i></a>
-        <a href=""><i class="fab fa-twitter-square"></i></a>
-        © Copyright 2021 RGZAltamoda | Creada por HermannZanetti
-    </footer>
+      </section>
+    </div>
+    <section>
+      <h1 class="tittle">Vestidos de RGZ Alta Moda: para eventos de día y de noche</h1>
+      <div class="container2">
+        <div class="card">
+          <img src="./img/corto1.jpg" alt="">
+          <h4>Vestidos cortos</h4>
+          <p>Usados generalmente en eventos diurnos que impliquen formalidad,tales como una entrega de premios,un acto
+            de inauguración,un bautizo,una
+            comunión o, lógicamente, una boda. Ahora bien, será determinante el largo de la falda: se aconseja que,
+            como corta, llegue a la altura de la rodilla.</p>
+
+        </div>
+        <div class="card">
+          <img src="./img/largo1.jpg" alt="">
+          <h4>Vestidos largos</h4>
+          <p>Los vestidos largos serán aptos para festividades matinales, vespertinas y nocturnas, siendo más
+            habitual en la mayoría de las culturas escogerlos para ocasiones que tengan lugar durante la tarde y en
+            adelante. Y siempre serán los más indicados para los eventos de alto nivel ceremonial.</p>
+
+        </div>
+        <div class="card">
+          <img src="./img/mono1.jpg" alt="">
+          <h4>Vestidos de coctel y monos</h4>
+          <p>Los vestidos de cóctel y los monos podrán llevarse tanto de día como de noche, en eventos que requieran
+            cierta etiqueta. No obstante, no dejará de ser significativo que sean glamurosos y estén hechos con
+            géneros de calidad, como todos los modelos de RGZ Alta moda. </p>
+        </div>
+      </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="footer-sm">
+      <div class="container">
+        <div class="row footer-sm__icons">
+          <div class="col">
+            <div class="col">Buscanos en las redes</div>
+            <a href=""><i class="fab fa-facebook-square"></i></a class="nav__link">
+            <a href=""><i class="fab fa-instagram-square"></i></a class="nav__link">
+            <a href=""><i class="fab fa-twitter-square"></i></a class="nav__link">
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row footer-bottom__copyright">
+          <div class="col">
+            &copy;Copyright 2021 <a href="#">RGZAltamoda</a> | Creada por HermannZanetti
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
