--- a/index.html
+++ b/index.html
@@ -14,51 +14,93 @@
 </head>
 
 <body>
-  <header class="header">
-    <div class="header__logo">
-      <img src="img/LogoMakr-0WdLz5.png" alt="" />
-    </div>
+  <header>
     <div class="header__contactanos">
-      <a href="https://api.whatsapp.com/send?phone=+5493516066789" class="btn-wsp"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://api.whatsapp.com/send?phone=+5493516066789" class="btn-wsp"><i class="fab fa-whatsapp"></i></a">
     </div>
-    <div>
-      <nav class="header__menu">
-        <ul>
-          <li><a href="./index.html">inicio</a></li>
-          <li><a href="./novias.html">novias</a></li>
-          <li><a href="./madrinas.html">madrinas</a></li>
-          <li><a href="./fiesta.html">fiesta</a></li>
-          <li><a href="./contacto.html">contacto</a></li>
-        </ul>
-      </nav>
+    <div class="container">
+      <div class="row">
+        <a class="nav__link" class="logo" href="./index.html"><img src="img/LogoMakr-0WdLz5.png" alt="logo" /></a>
+        <nav>
+          <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link" href="./index.html">inicio</a class="nav__link"></li
+              class="nav_item">
+            <li class="nav__item"><a class="nav__link" href="./novias.html">novias</a class="nav__link"></li
+              class="nav_item">
+            <li class="nav__item"><a class="nav__link" href="./madrinas.html">madrinas</a class="nav__link"></li
+              class="nav_item">
+            <li class="nav__item"><a class="nav__link" href="./fiesta.html">fiesta</a class="nav__link"></li
+              class="nav_item">
+            <li class="nav__item"><a class="nav__link" href="./contacto.html">contacto</a class="nav__link"></li
+              class="nav_item">
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
-  <section class="principal">
-    <img class="principal__img" src="./img/casa1.jpg" alt="" width="960"/>
-    <div class="principal__texto1">
-      <p>Hola! Que lindo que hayas llegado hasta acá. Me presento... Soy Romina Zanetti Gusman. Nací y crecí entre hilos
-        y costuras. Mamá modista y trabajadora de mercería y abuela muy aficionada a remodelar y coser.
-        Siempre me gustó éste mundo pero jamás pensé en dedicarme a él. Pasando por otra carrera antes, hoy soy
-        Diseñadora de Indumentaria y Textil y soy muy felíz!!
-        Te invito a que hagamos algo juntas/os. Algo bello, único y eterno. Y que disfrutemos de este viaje hermoso que
-        es crear algo a medida, para tu ocasión especial.
-      </p>
+  <section class="intro__section">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <img class="principal__img" src="./img/casa1.jpg" alt="" />
+          <div class="principal__texto1">
+            <p>Hola! Que lindo que hayas llegado hasta acá. Me presento... Soy Romina Zanetti Gusman. Nací y crecí entre
+              hilos
+              y costuras. Mamá modista y trabajadora de mercería y abuela muy aficionada a remodelar y
+              coser.
+              Siempre me gustó éste mundo pero jamás pensé en dedicarme a él. Pasando por otra carrera
+              antes, hoy soy
+              Diseñadora de Indumentaria y Textil y soy muy felíz!!
+              Te invito a que hagamos algo juntas/os. Algo bello, único y eterno. Y que disfrutemos de
+              este viaje hermoso que
+              es crear algo a medida, para tu ocasión especial.
+            </p>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
   <section>
-    <div class="texto2">
-      <h2>Vestidos 2021</h2>
-      <p>Te compartimos los vestidos de novias más impresionantes de 2021</p>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <div class="texto2">
+            <h2>Vestidos 2021</h2>
+            <p>Te compartimos los vestidos de novias más impresionantes de 2021</p>
+          </div>
+          <div class="video-novias">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/FhICN1mgwI0"
+              title="YouTube video player" frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen></iframe>
+          </div>
+        </div>
+      </div>
     </div>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/Dy4K8kFH-Nc" title="YouTube video player"
-      frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-      allowfullscreen></iframe>
   </section>
-  <footer class="">
-    <a href=""><i class="fab fa-facebook-square"></i></a>
-    <a href=""><i class="fab fa-instagram-square"></i></a>
-    <a href=""><i class="fab fa-twitter-square"></i></a>
-    © Copyright 2021 RGZAltamoda | Creada por HermannZanetti
+  <footer class="footer">
+    <div class="footer-sm">
+      <div class="container">
+        <div class="row footer-sm__icons">
+          <div class="col">
+            <div class="col">Buscanos en las redes</div>
+            <a href=""><i class="fab fa-facebook-square"></i></a class="nav__link">
+            <a href=""><i class="fab fa-instagram-square"></i></a class="nav__link">
+            <a href=""><i class="fab fa-twitter-square"></i></a class="nav__link">
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row footer-bottom__copyright">
+          <div class="col">
+            &copy;Copyright 2021 <a href="#">RGZAltamoda</a> | Creada por HermannZanetti
+          </div>
+        </div>
+      </div>
+    </div>
   </footer>
 </body>
 
