--- a/novias.html
+++ b/novias.html
@@ -1,74 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>RGZAltamoda</title>
-        <link rel="stylesheet" href="./style.css">
-        <link
-            rel="stylesheet"
-            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-            integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
-            crossorigin="anonymous"
-            referrerpolicy="no-referrer"
-          />
-          <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-      </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RGZAltamoda</title>
+  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+</head>
 
 <body>
-  <header class="header">
-    <div class="header__logo">
-      <img src="img/LogoMakr-0WdLz5.png" alt="" />
-    </div>
+  <header>
     <div class="header__contactanos">
-      <a href="https://api.whatsapp.com/send?phone=+5493516066789" class="btn-wsp"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://api.whatsapp.com/send?phone=+5493516066789" class="btn-wsp"><i class="fab fa-whatsapp"></i></a">
     </div>
-    <div>
-      <nav class="header__menu">
-        <ul>
-          <li><a href="./index.html">inicio</a></li>
-          <li><a href="./novias.html">novias</a></li>
-          <li><a href="./madrinas.html">madrinas</a></li>
-          <li><a href="./fiesta.html">fiesta</a></li>
-          <li><a href="./contacto.html">contacto</a></li>
-        </ul>
-      </nav>
+    <div class="container">
+      <div class="row">
+        <a class="nav__link" class="logo" href="./index.html"><img src="img/LogoMakr-0WdLz5.png" alt="logo" /></a>
+        <nav>
+          <ul class="nav__list">
+            <li class="nav__item"><a class="nav__link" href="./index.html">inicio</a class="nav__link"></li
+              class="nav_item">
+            <li class="nav__item"><a class="nav__link" href="./novias.html">novias</a class="nav__link"></li
+              class="nav_item">
+            <li class="nav__item"><a class="nav__link" href="./madrinas.html">madrinas</a class="nav__link"></li
+              class="nav_item">
+            <li class="nav__item"><a class="nav__link" href="./fiesta.html">fiesta</a class="nav__link"></li
+              class="nav_item">
+            <li class="nav__item"><a class="nav__link" href="./contacto.html">contacto</a class="nav__link"></li
+              class="nav_item">
+          </ul>
+        </nav>
+      </div>
     </div>
   </header>
-    <main>
-        <section class="principal">
-            <div>
-                <p class="principal__texto1">Conscientes de lo importante que es para toda novia lucir de blanco más única que nunca el día de su
-                    boda, en RGZ Alta moda ofrecemos una amplia variedad de vestidos de novia de diferentes estilos para
-                    que encuentres tu modelo perfecto.</p>
-            </div>
-            <div class="principal__imagenes">
-                <img src="./img/novia1.jpg" alt="novia1" />
-                <img src="./img/novia2.jpg" alt="novia2" />
-                <img src="./img/novia3.jpg" alt="novia3" />
-                <br />
-            </div>
-            <div class="principal__imagenes2">
-                <img src="./img/novia4.jpg" alt="novia4" />
-                <img src="./img/novia5.jpg" alt="novia5" />
-                <img src="./img/novia6.jpg" alt="novia6" />
-            </div>
-            <p>Encontrar el vestido que te acompañe en uno de los días más importantes de tu vida es su especialidad.
-                Rgz Alta moda pone todo su talento y dedicación para diseñar los vestidos de novias
-                más especiales. Su equipo de asesoras y modistas hacen que sus clientas vivan una experiencia única
-                y que elijan vestidos acordes a su personalidad sin presiones.
-                Romina se define como una apasionada de su trabajo y es por eso que está
-                en continuo movimiento buscando siempre nuevas ideas para sorprender a sus novias.</p>
-        </section>
-    </main>
-    <footer class="">
-        <a href=""><i class="fab fa-facebook-square"></i></a>
-        <a href=""><i class="fab fa-instagram-square"></i></a>
-        <a href=""><i class="fab fa-twitter-square"></i></a>
-        © Copyright 2021 RGZAltamoda | Creada por HermannZanetti
-      </footer>
+  <main>
+    <div class="container">
+      <section class="principal">
+        <div>
+          <p class="principal__texto1">Conscientes de lo importante que es para toda novia lucir de blanco más única que
+            nunca el día de su
+            boda, en RGZ Alta moda ofrecemos una amplia variedad de vestidos de novia de diferentes estilos para
+            que encuentres tu modelo perfecto.</p>
+        </div>
+        <div class="gallery-container">
+          <div class="gallery__item">
+            <img src="./img/galeria1 .jpeg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/galeria2.jpeg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/galeria3.jpeg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/galeria4.jpeg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/galeria5.jpeg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/galeria6.jpeg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/galeria7.jpeg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/galeria8.jpeg" alt="" class="gallery__img">
+          </div>
+          <div class="gallery__item">
+            <img src="./img/galeria9.jpeg" alt="" class="gallery__img">
+          </div>
+        </div>
+        <div class="row">
+          <p>Encontrar el vestido que te acompañe en uno de los días más importantes de tu vida es su especialidad.
+            Rgz Alta moda pone todo su talento y dedicación para diseñar los vestidos de novias
+            más especiales. Su equipo de asesoras y modistas hacen que sus clientas vivan una experiencia única
+            y que elijan vestidos acordes a su personalidad sin presiones.
+            Romina se define como una apasionada de su trabajo y es por eso que está
+            en continuo movimiento buscando siempre nuevas ideas para sorprender a sus novias.</p>
+        </div>
+    </div>
+    </section>
+  </main>
+  <footer class="footer">
+    <div class="footer-sm">
+      <div class="container">
+        <div class="row footer-sm__icons">
+          <div class="col">
+            <div class="col">Buscanos en las redes</div>
+            <a href=""><i class="fab fa-facebook-square"></i></a class="nav__link">
+            <a href=""><i class="fab fa-instagram-square"></i></a class="nav__link">
+            <a href=""><i class="fab fa-twitter-square"></i></a class="nav__link">
+
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <div class="container">
+        <div class="row footer-bottom__copyright">
+          <div class="col">
+            &copy;Copyright 2021 <a href="#">RGZAltamoda</a> | Creada por HermannZanetti
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 
 </html>
